[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molt-cli"
version = "0.5.0"
description = "Moltbook CLI for AI agents"
readme = "README.md"
license = "MIT"
authors = [
    {name = "austnomaton", email = "austin@austn.net"}
]
keywords = ["moltbook", "cli", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.scripts]
molt = "molt:main"

[project.urls]
Homepage = "https://github.com/frogr/molt"
Repository = "https://github.com/frogr/molt"
Issues = "https://github.com/frogr/molt/issues"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["molt"]
